<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="@dimen/radius_16"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_14">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/c_digo_de_confirmaci_n"
                    android:textAlignment="center"
                    android:textColor="@color/secondaryColor"
                    android:textSize="@dimen/text_size_22"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:text="@string/ingresa_el_c_digo_de_confirmaci_n"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/que_te_enviamos_v_a_correo"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_16" />

                <TextView
                    android:id="@+id/tv_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="email@example.com.mx"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:orientation="horizontal">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1">

                        <EditText
                            android:id="@+id/code_pos_1"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/code_pos_2"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/code_pos_2"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/code_pos_3"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/code_pos_3"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/code_pos_4"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/code_pos_4"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/code_pos_5"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/code_pos_5"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="1"
                            android:nextFocusForward="@id/code_pos_6"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cv_pos_6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_4"
                        android:layout_marginVertical="@dimen/margin_4"
                        android:layout_weight="1"
                        android:elevation="2dp">

                        <EditText
                            android:id="@+id/code_pos_6"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@null"
                            android:inputType="number"
                            android:maxLength="1"
                            android:singleLine="true"
                            android:textAlignment="center" />

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/redError"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_countdown"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/margin_4"
                        android:text="4:55"
                        android:textColor="@color/greenStrong" />

                    <View
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/margin_4"
                        android:background="@color/greenStrong" />

                    <TextView
                        android:id="@+id/btnResendCode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_4"
                        android:text="@string/renviar_c_digo"
                        android:textColor="@color/greenStrong" />

                </LinearLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnContinueCodeConfirm"
                    style="@style/AKCommonUtils.MaterialButton.SecondaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_24"
                    android:enabled="false"
                    android:text="@string/continuar" />


                <TextView
                    android:id="@+id/btnCancelCodeConfirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_12"
                    android:layout_marginTop="@dimen/margin_12"
                    android:gravity="center"
                    android:text="@string/cancelar"
                    android:textColor="@color/greenStrong"
                    android:textSize="@dimen/text_size_18" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>